--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,125 @@
-body {
-    font-family: Arial, sans-serif;
+/* Estilos generales */
+* {
     margin: 0;
     padding: 0;
-    background-color: #4b4b4b;
-}
-
-
-.banner {
-    background-color: #333;
-    overflow: hidden;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.banner a {
-    color: white;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    background-color: #F5F5F5; /* Gris claro */
+    color: #333333; /* Texto gris oscuro */
+    line-height: 1.6;
+  }
+  
+  a {
     text-decoration: none;
-    padding: 10px 20px;
-    display: block;
-    font-size: 18px;
-}
-
-.banner .logo {
-    font-size: 24px;
+    color: inherit;
+  }
+  
+  /* Header */
+  header {
+    background-color: #FFFFFF;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+ /* Banner Importante Parte de arriba CSS */
+  header img {
+    width: 20px;
+    height: 20px;
+  }
+  
+  header nav ul {
+    list-style: none;
+    display: flex;
+  }
+  
+  header nav ul li {
+    margin: 0 15px;
+  }
+  
+  header nav ul li a {
+    color: #292929; /* Azul */
+    font-weight: 500;
+    font-size: 15px;
+  }
+  
+  /* Main Seccion */
+  main {
+    padding: 50px 0;
+    text-align: center; /* Asegura que el texto en .main esté centrado */
+  }
+  
+  main h1 {
+    font-size: 3rem; /* Ajusta el tamaño del título según lo necesites */
+    color: #333333; /* Color del texto */
+    margin-bottom: 30px;
+    text-align: center; /* Asegura que el título esté centrado */
+  }
+  
+  main p {
+    font-size: smaller;
+    vertical-align: sub;
+    line-height: 0
+  }
+  .title {
+    font-size: 2.5rem;
+    color: #333333;
+    margin-bottom: 30px;
+  }
+  
+  /* Product Section */
+  .products {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+  
+  .product {
+    background-color: #FFFFFF; /* Blanco */
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .product img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 15px;
+  }
+  
+  .product h3 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #333333;
+    margin-bottom: 10px;
+  }
+  
+  .product .price {
+    font-size: 1.2rem;
     font-weight: bold;
-    color: #ffffff;
-}
+    color: #0071E3; /* Azul */
+    margin-bottom: 20px;
+  }
+  
+  .product .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #0071E3; /* Azul */
+    color: #FFFFFF;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .product .btn:hover {
+    background-color: #005BB5; /* Azul más oscuro */
+  }
+  
