--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
   header {
     background-color: #FFFFFF;
     padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,13 +61,14 @@
   }
   
   main p {
-    font-size: smaller;
+    font-size: 18px;
+    font-weight: bold;
     vertical-align: sub;
     line-height: 0
   }
   .title {
     font-size: 2.5rem;
-    color: #333333;
+    color: #6e6e73;
     margin-bottom: 30px;
   }
   
@@ -80,9 +81,9 @@
   }
   
   .product {
-    background-color: #FFFFFF; /* Blanco */
+    background-color: #ffffff; /* Blanco */
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 200px rgba(0, 0, 0, 0.1);
     width: 300px;
     padding: 20px;
     text-align: center;
